crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__if_else.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    statements: [
        If(
            If {
                condition: Infix(
                    InfixExpr {
                        lhs: Ident(
                            Ident(
                                "x",
                            ),
                        ),
                        rhs: Number(
                            10.0,
                        ),
                        op: Eq,
                    },
                ),
                body: [
                    Pipeline(
                        Pipeline {
                            env: [],
                            commands: [
                                Command {
                                    name: "echo",
                                    args: [
                                        String(
                                            "hi",
                                        ),
                                    ],
                                    merge_stderr: false,
                                },
                            ],
                            write: None,
                        },
                    ),
                ],
                else_: Some(
                    [
                        Pipeline(
                            Pipeline {
                                env: [],
                                commands: [
                                    Command {
                                        name: "echo",
                                        args: [
                                            String(
                                                "nice",
                                            ),
                                        ],
                                        merge_stderr: false,
                                    },
                                ],
                                write: None,
                            },
                        ),
                    ],
                ),
            },
        ),
    ],
}
