crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__infix_expressions.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    statements: [
        Pipeline(
            Pipeline(
                [
                    Command {
                        name: "echo",
                        args: [
                            Infix(
                                InfixExpr {
                                    lhs: Number(
                                        1.0,
                                    ),
                                    rhs: Infix(
                                        InfixExpr {
                                            lhs: Infix(
                                                InfixExpr {
                                                    lhs: Number(
                                                        2.0,
                                                    ),
                                                    rhs: Number(
                                                        3.0,
                                                    ),
                                                    op: Mul,
                                                },
                                            ),
                                            rhs: Infix(
                                                InfixExpr {
                                                    lhs: Number(
                                                        4.0,
                                                    ),
                                                    rhs: Number(
                                                        5.0,
                                                    ),
                                                    op: Sub,
                                                },
                                            ),
                                            op: Div,
                                        },
                                    ),
                                    op: Add,
                                },
                            ),
                        ],
                    },
                ],
            ),
        ),
    ],
    symbols: {},
}
