crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__last_status.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    statements: [
        Pipeline(
            Pipeline {
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            LastStatus,
                            Infix(
                                InfixExpr {
                                    lhs: LastStatus,
                                    rhs: Number(
                                        10.0,
                                    ),
                                    op: Add,
                                },
                            ),
                        ],
                    },
                ],
                write: None,
            },
        ),
    ],
}
