crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__merge_stderr_redirect_append.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            String(
                                "hi",
                            ),
                        ],
                        merge_stderr: true,
                    },
                ],
                write: Some(
                    PipelineEnd {
                        kind: Append,
                        expr: String(
                            "file.txt",
                        ),
                    },
                ),
            },
        ),
    ],
}
