crates/shwasi-lang/src/parser/snapshots/shwasi_lang__parser__tests__pipelines.snap
---
source: crates/shwasi-lang/src/parser/mod.rs
expression: ast
---
Ast {
    statements: [
        Pipeline(
            Pipeline(
                [
                    Command {
                        name: "echo",
                        args: [
                            String(
                                "hi",
                            ),
                        ],
                    },
                    Command {
                        name: "cat",
                        args: [],
                    },
                    Command {
                        name: "wc",
                        args: [
                            String(
                                "-w",
                            ),
                        ],
                    },
                ],
            ),
        ),
    ],
    symbols: {},
}
